# nptool

./: .gitignore  CMakeLists.txt  README.md  changelog.md
include/: actions.h  app_config.h.in  cui.h  help.h  nptool.h  parseArgs.h
lib/: README.md
src/: actions.cpp  cui.cpp  help.cpp  main.cpp  nptool.cpp  parseArgs.cpp
templates/blank/: README.md
templates/cpp_cmake/: CMakeLists.txt  README.md
templates/cpp_cmake/src/: main.cpp  utils.cpp
templates/cpp_opencv/: CMakeLists.txt  README.md
templates/cpp_opencv/include/: utils.h
templates/cpp_opencv/src/: main.cpp  utils.cpp
